--- a/src/components/Calculator/Calculator.module.css
+++ b/src/components/Calculator/Calculator.module.css
@@ -2,8 +2,7 @@
   display: grid;
   grid-template-columns: repeat(4, 3.5rem);
   gap: 0.5rem;
-  max-width: 200px;
-  margin: auto;
+  margin-inline: auto;
 }
 .Calculator input,
 .Calculator button {
