--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,5 +5,6 @@
 
   display: flex;
   align-items: center;
-  gap: 2rem;
+  column-gap: 2rem;
+  flex-wrap: wrap;
 }
