--- a/src/theme/typography.css
+++ b/src/theme/typography.css
@@ -17,7 +17,11 @@
   font-size: 2rem;
   font-weight: 700;
   line-height: 1.2;
-  margin-bottom: 1rem;
+  margin-block: 1rem;
 
   color: white;
+}
+
+.Typography.nowrap {
+  white-space: nowrap;
 }
